# aether-manager

./: --paginate  .gitignore  README.md  build.gradle.kts  changelog.md  gradle.properties  package-lock.json  settings.gradle.kts  update.json
.acside/editor/: openedFiles.json
.github/workflows/: build-release.yml  build.yml  codeql.yml
app/: build.gradle.kts  libs_additions.toml  libs_native_additions.toml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aether_exec.cpp  aether_strings.h
app/src/main/java/dev/aether/manager/: AetherApplication.kt  MainActivity.kt  SetupActivity.kt  SplashActivity.kt
app/src/main/java/dev/aether/manager/ads/: AdBannerView.kt  AdBlockDetector.kt  AdBlockDialog.kt  AdBlockDialogHost.kt  AdBlockViewModel.kt  AdManager.kt  AdScheduler.kt  InterstitialAdManager.kt  RewardedAdManager.kt
app/src/main/java/dev/aether/manager/data/: AppProfile.kt  AppProfileRepository.kt  AppProfileViewModel.kt  MainViewModel.kt
app/src/main/java/dev/aether/manager/gamebooster/: GameBoosterManager.kt  GameBoosterOverlay.kt  GameBoosterService.kt  GameBoosterViewModel.kt
app/src/main/java/dev/aether/manager/i18n/: AppStrings.kt  LanguageDropdown.kt  StringsEn.kt  StringsId.kt  StringsProvider.kt  StringsRu.kt  StringsZh.kt
app/src/main/java/dev/aether/manager/security/: StringCrypt.kt
app/src/main/java/dev/aether/manager/ui/about/: AboutScreen.kt
app/src/main/java/dev/aether/manager/ui/appprofile/: AppProfileScreen.kt
app/src/main/java/dev/aether/manager/ui/backup/: BackupScreen.kt
app/src/main/java/dev/aether/manager/ui/components/: AdMobBanner.kt  Components.kt
app/src/main/java/dev/aether/manager/ui/home/: HomeScreen.kt
app/src/main/java/dev/aether/manager/ui/settings/: SettingsScreen.kt
app/src/main/java/dev/aether/manager/ui/tweak/: TweakScreen.kt
app/src/main/java/dev/aether/manager/update/: UpdateChecker.kt  UpdateDialog.kt  UpdateViewModel.kt
app/src/main/java/dev/aether/manager/util/: BackupManager.kt  NativeExec.kt  RootManager.kt  RootUtils.kt
buildSrc/: build.gradle.kts  buildSrc-build.gradle.kts
buildSrc/src/main/kotlin/dev/aether/plugin/: StringEncryptPlugin.kt
docs/: index.html  index.md
docs/.vitepress/: config.mts
docs/assets/: style.css  style.min.css
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
